# TJ-Wriggle-solver

./: .gitignore  CMakeLists.txt  README.md  tjw.pro
source/: BFTSGrid.cpp  BFTSGrid.h  BFTSWrigglerGrid.cpp  BFTSWrigglerGrid.h  GBFGSWrigglerGrid.cpp  GBFGSWrigglerGrid.h  GraphSearchWrigglerGrid.cpp  GraphSearchWrigglerGrid.h  Grid.cpp  Grid.h  IDDFTSWrigglerGrid.cpp  IDDFTSWrigglerGrid.h  ID_DFTSWrigglerGrid.cpp  ID_DFTSWrigglerGrid.h  PolynomialSolver.cpp  PolynomialSolver.h  PriorityQueue.h  Timer.cpp  Timer.h  Tjw.cpp  Tree.h  Wriggler.cpp  Wriggler.h  WrigglerGrid.cpp  WrigglerGrid.h  grid.cpp  grid.h  test.cpp  test.cpp.autosave  test.h  tjw.cpp  vec2.h
source/PolySolver/: PolynomialSolver.cpp  PolynomialSolver.h
